Creating Rouen Lions Edition

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">Retrace l'histoire des BDS de Rouen Business School avec cette édition limitée <Strong> Rouen Lions© </Strong> du 2048 !</p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -119,11 +119,11 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">Comment jouer ?:</strong> Le principe est exactement le même que pour le 2048. Joins deux logos similaires pour en obtenir un nouveau. Plus haut tu grimperas, notre reconnaissance (et la masse de goodies) tu gagneras. Surtout, n'oublie pas vendredi 27 Mars de <strong>voter pour nous !</strong>  
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> The game on <a href="http://git.io/2048">this site</a> is the original version of 2048. Apps for <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android</a> are also available. Other versions are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> The game on this site is a new version of the 2048 designed by the Rouen Lions© for the sudents of Neoma BS. The first and genuine version of Gabriele Cirulli can be find <a href="http://gabrielecirulli.github.io/2048/" target="_blank">Here</a>.
     </p>
     <hr>
     <p>
